add notification service and update all business logic services